@@ -1,4 +1,4 @@
-# $Id: sample-ngircd.conf,v 1.30 2005/02/04 14:24:21 alex Exp $
+# $Id: sample-ngircd.conf,v 1.31 2005/03/02 16:07:30 alex Exp $
 
 #
 # This is a sample configuration file for the ngIRCd, which must be adepted
@@ -109,6 +109,9 @@
 
 	# Password of the IRC operator
 	;Password = ThePwd
+
+	# Optional Mask from which /OPER will be accepted
+	;Mask = *!ident@somewhere.example.com
 
 [Operator]
 	# More [Operator] sections, if you like ...
